# membot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  IDIOTS_GUIDE.md  KRAKENCOMPLIANCE.md  PROJECT_SUMMARY.md  README.md  SOLANAINTEGRATION.md  USER_MANUAL.md  env.example  lychee.toml  main.py  pyproject.toml  requirements.txt  run_paper_demo.py  runpaperdemo.bat  runpaperdemo.sh  start_paper_mode.py  test_bot.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_checklist.md
.github/workflows/: docs-link-check.yml  lint.yml  pages.yml  python-tests.yml  snake.yml  sync-user-manual.yml
Releases/: README.md  RELEASE_TEMPLATE.md  v1.1.0-notes.md
assets/sprites/: NeoMemeMarkets.svp
docs/: _config.yml  diagrams.md  index.md  media-guides.md  troubleshooting.md  user-manual.md
docs/_layouts/: default.html
docs/assets/: style.css
docs/releases/: v1.0.1.md
dumps/: ledger_verification_report.json  notifier_test_report.json  paperdemo_compliance.json  paperdemo_events.json  paperdemo_signals.json  paperdemo_summary.json  security_validation_report.json  simple_integration_test_report.json
electron/: forge.config.cjs  package-lock.json  package.json
electron/assets/: make_icon.py
electron/src/: main.js
scripts/: md_to_pdf.py  validate_mermaid.py
src/: __init__.py  config.py
src/brain/: __init__.py  ml_engine.py  rules_engine.py
src/gui/: __init__.py  main_window.py  sprite_generator.py  sprite_manager.py
src/integrations/: telegram_listener.py
src/mcp/: axiom_mcp_server.py
src/security/: __init__.py  contract_checker.py  memecoin_scam_detector.py  solana_wallet_manager.py  wallet_manager.py
src/trading/: __init__.py  digital_wallet_manager.py  exchange.py  financial_integration.py  risk_manager.py  strategy.py
src/utils/: __init__.py  database.py  logger.py  scheduler.py
tests/: __init__.py  integration_test.py  ledger_verification.py  mock_rpc_server.py  notifier_test.py  security_validation.py  simple_integration_test.py  test_contract_checker.py  test_executor.py  test_rpc_connector.py  test_wallet_manager.py
